--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -101,7 +101,7 @@
       register: igw_out
 
     - name: Set up public subnet route table
-      ec2_vpc_route_table:
+      amazon.aws.ec2_vpc_route_table:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{ region }}"
         tags:
@@ -125,7 +125,7 @@
       register: NATGW_out
 
     - name: Set up Private subnet route table
-      ec2_vpc_route_table:
+      amazon.aws.ec2_vpc_route_table:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{ region }}"
         tags:
