--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -101,8 +101,7 @@
       register: igw_out
 
     - name: Set up public subnet route table
-      amazonawsec2_vpc_route_table:
-
+      amazon.aws.ec2_vpc_route_table:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{ region }}"
         tags:
@@ -113,7 +112,9 @@
           - "{{pubsub3_out.subnet.id}}"
         routes:
           - dest: 0.0.0.0/0
-            gateway_id: "{{igw_out.gateway_id}}"
+            gateway_id: "{{ igw.gateway_id }}"
+          - dest: 0.0.0.0/0
+            gateway_id: "{{ igw.gateway_id }}"
       register: pubRT_out
 
     - name: Create new nat gateway and allocate new EIP if a nat gateway does not yet exist in the subnet.
