--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -1,9 +1,6 @@
----
 - hosts: localhost
   connection: local
   gather_facts: False
-  vars_files:
-      - vars/vpc_setup
   tasks:
     - name: Import VPC Variables
       include_vars: vars/vpc_setup
@@ -19,8 +16,8 @@
         state: "{{state}}"
       register: vpcout
 
-    - debug:
-        var: vpcout
+    #  - debug:
+    #      var: vpcout
 
     - name: create Public Subnet 1 in Zone1
       ec2_vpc_subnet:
@@ -80,6 +77,8 @@
           Name: vprofile_privsub2
       register: privsub2_out
 
+
+
     - name: create Private subnet 3 in zone3
       ec2_vpc_subnet:
         vpc_id: "{{ vpcout.vpc.id }}"
@@ -90,15 +89,6 @@
         resource_tags:
           Name: vprofile_privsub3
       register: privsub3_out
-
-    - name: Internet Gateway Setup
-      ec2_vpc_igw:
-        vpc_id: "{{ vpcout.vpc.id }}"
-        region: "{{ region }}"
-        state: "{{state}}"
-        resource_tags:
-          Name: vprofile_IGW
-      register: igw_out
 
     - name: Internet Gateway Setup
       ec2_vpc_igw:
