--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -16,10 +16,10 @@
         region: "{{region}}"
       register: vprokey_out
 
-    - name: Save private key into file loginkey_vpro.pem
+    - name: Save private key into file loginkey_vpro
       copy:
         content: "{{vprokey_out.key.private_key}}"
-        dest: "./loginkey_vpro.pem"
+        dest: "./loginkey_vpro"
         mode: 0600
       when: vprokey_out.changed
 
@@ -204,8 +204,8 @@
 
     - name: Copy login key to provision_stack directory
       copy:
-        src: loginkey_vpro.pem
-        dest: provision-stack/loginkey_vpro.pem
+        src: loginkey_vpro
+        dest: provision-stack/loginkey_vpro
         mode: '0400'
 
     - name: Insert/Update Inventory file provision-stack/inventory-vpro
