--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -204,8 +204,8 @@
 
     - name: Copy login key to provision_stack directory
       copy:
-        src: loginkey_vpro
-        dest: /provision-stack/loginkey_vpro
+        src: ansible-aws-vpc/provision-stack/loginkey_vpro
+        dest: provision-stack/loginkey_vpro
         mode: 0600
 
     - name: Insert/Update Inventory file provision-stack/inventory-vpro
