--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -204,9 +204,9 @@
 
     - name: Copy login key to provision_stack directory
       copy:
-        src: /home/ubuntu/ansible-aws-vpc/files/loginkey_vpro
-        dest: /path/on/remote/host/loginkey_vpro
-        mode: 0600
+        src: loginkey_vpro.pem
+        dest: provision-stack/loginkey_vpro.pem
+        mode: '0400'
 
     - name: Insert/Update Inventory file provision-stack/inventory-vpro
       blockinfile:
