--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -203,7 +203,7 @@
           db01_ip: {{ db01_out.tagged_instances[0].private_ip }}
 
     - name: Copy login key to provision_stack directory
-      ansible builtin copy:
+      ansible.builtin.copy:
         src: loginkey_vpro.pem
         dest: provision-stack/loginkey_vpro.pem
         mode: 0600
