--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -19,7 +19,7 @@
     - name: Save private key into file loginkey_vpro
       copy:
         content: "{{vprokey_out.key.private_key}}"
-        dest: "./loginkey_vpro"
+        dest: "./loginkey_vpro.pem"
         mode: 0600
       when: vprokey_out.changed
 
