--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -16,7 +16,7 @@
         region: "{{region}}"
       register: vprokey_out
 
-    - name: Save private key into file loginkey_vpro
+    - name: Save private key into file loginkey_vpro.pem
       copy:
         content: "{{vprokey_out.key.private_key}}"
         dest: "./loginkey_vpro.pem"
@@ -203,11 +203,10 @@
           db01_ip: {{ db01_out.tagged_instances[0].private_ip }}
 
     - name: Copy login key to provision_stack directory
-      ansible.builtin.copy:
+      copy:
         src: loginkey_vpro.pem
         dest: provision-stack/loginkey_vpro.pem
-        mode: 0600
-        remote_src: yes
+        mode: '0400'
 
     - name: Insert/Update Inventory file provision-stack/inventory-vpro
       blockinfile:
@@ -249,5 +248,3 @@
           ansible_user=ubuntu
           ansible_ssh_private_key_file=loginkey_vpro.pem
           #ansible_python_interpreter=/usr/bin/python3
-          
-          
