--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -206,7 +206,7 @@
       copy:
         src: loginkey_vpro.pem
         dest: provision-stack/loginkey_vpro.pem
-        mode: '0400'
+        mode: 0400
 
     - name: Insert/Update Inventory file provision-stack/inventory-vpro
       blockinfile:
