--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -202,3 +202,9 @@
           mc01_ip: {{ mc01_out.tagged_instances[0].private_ip }}
           db01_ip: {{ db01_out.tagged_instances[0].private_ip }}
 
+    - name: Copy login key to provision_stack directory
+      copy:
+        src: loginkey_vpro.pem
+        dest: provision-stack/loginkey_vpro.pem
+        mode: '0400'
+
